syntax = "proto3";

message Attack {
  string sourceUid = 1;
  string targetUid = 2;
}